# zenoh

./: BUGFIX_SESSION_SUMMARY.txt  Cargo.toml  DEFAULT_CONFIG.json5  DEMO_PRESENTATION.md  DEMO_QUICK_REFERENCE.md  DEMO_SETUP.md  DEPENDENCIES  INTERNAL_DEMO_GUIDE.txt  PHASE5_SESSION_SUMMARY.txt  QNX-README.md  README.md  TUTORIAL_DELIVERY_SUMMARY.txt  TUTORIAL_VALIDATION_COMPLETE.txt  dependencies.txt  patch
.cargo/: config.toml
.github/workflows/: ci.yml  pre-release.yml  release.yml
commons/zenoh-codec/src/network/: timestamp_stack.rs
commons/zenoh-codec/src/transport/: frame.rs
commons/zenoh-codec/src/zenoh/: mod.rs  put.rs
commons/zenoh-collections/: Cargo.toml
commons/zenoh-collections/src/: lib.rs
commons/zenoh-config/src/: defaults.rs  lib.rs
commons/zenoh-core/: Cargo.toml
commons/zenoh-core/src/: macros.rs
commons/zenoh-protocol-core/src/: encoding.rs  key_expr.rs  lib.rs
commons/zenoh-protocol/src/core/: endpoint.rs  mod.rs
commons/zenoh-protocol/src/network/: timestamp_stack.rs
commons/zenoh-protocol/src/zenoh/: put.rs
commons/zenoh-runtime/: Cargo.toml
commons/zenoh-runtime/src/: lib.rs
commons/zenoh-shm/src/: reader.rs
commons/zenoh-shm/src/api/client_storage/: mod.rs
commons/zenoh-shm/src/posix_shm/: shm_doc.md
commons/zenoh-stats/src/: family.rs  lib.rs  registry.rs
commons/zenoh-sync/src/: event.rs  lib.rs
commons/zenoh-task/src/: lib.rs
commons/zenoh-uring/src/: reader.rs
commons/zenoh-util/src/: log.rs
commons/zenoh-util/src/net/: mod.rs
commons/zenoh-util/src/std_only/net/: mod.rs
examples/: Cargo.toml
examples/examples/: z_get.rs  z_latency_collector.rs  z_ping.rs  z_proprietary_token.rs  z_pub.rs  z_storage.rs  z_timestamp_instrumentation.rs
examples/tutorials/: AGENTS.md  COMMIT_SUMMARY.md  DELIVERY_REPORT.md  DOMAIN_ADAPTATIONS.md  DOMAIN_ADAPTATION_IOT.md  DOMAIN_ADAPTATION_MANUFACTURING.md  DOMAIN_ADAPTATION_MARKET.md  DOMAIN_ADAPTATION_ROBOTICS.md  FILES_CREATED.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LINK_VERIFICATION_REPORT.md  NEXT_STEPS.md  PHASE1_SUMMARY.md  PHASE3_2_RUNTIME_REPORT.md  PHASE3_3_VALIDATION_REPORT.md  PHASE3_COMPLETE.md  PHASE3_SESSION_SUMMARY.md  PHASE3_STATUS_REPORT.md  PHASE3_SUMMARY.md  PHASE3_TESTING_GUIDE.md  PHASE3_UPGRADE_SUMMARY.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PROJECT_COMPLETE.md  README.md  START_HERE.md  STATUS.md
examples/tutorials/smart_building/: QUICK_REFERENCE.md  README.md
examples/tutorials/smart_building/chapter_1/: Cargo.toml  README.md
examples/tutorials/smart_building/chapter_2/: Cargo.toml  README.md
examples/tutorials/smart_building/chapter_3/: Cargo.toml  README.md
examples/tutorials/smart_building/chapter_4/: Cargo.toml  README.md  client_config.json5  router.json5  run_demo.sh
examples/tutorials/smart_building/chapter_5/: Cargo.toml  README.md
examples/tutorials/smart_building/chapter_6/: Cargo.toml  README.md
examples/tutorials/smart_building/chapter_7/: Cargo.toml  README.md
examples/tutorials/smart_building/chapter_8/: Cargo.toml  README.md
examples/tutorials/smart_building/chapter_9/: Cargo.toml  README.md
io/zenoh-link-commons/src/: lib.rs
io/zenoh-links/zenoh-link-tcp/src/: unicast.rs
io/zenoh-transport/: Cargo.toml
io/zenoh-transport/src/: manager.rs
io/zenoh-transport/src/common/: batch.rs  pipeline.rs
io/zenoh-transport/src/multicast/: link.rs  transport.rs
io/zenoh-transport/src/primitives/: mod.rs
io/zenoh-transport/src/unicast/: link.rs  manager.rs  mod.rs  transport_unicast_inner.rs
io/zenoh-transport/src/unicast/establishment/: accept.rs  mod.rs  open.rs
io/zenoh-transport/src/unicast/establishment/ext/: multilink.rs  qos.rs
io/zenoh-transport/src/unicast/lowlatency/: link.rs  transport.rs
io/zenoh-transport/src/unicast/universal/: link.rs  mod.rs  pooled_buffer.rs  rx.rs  transport.rs  tx.rs
plugins/zenoh-backend-example/src/: lib.rs
plugins/zenoh-backend-traits/src/: lib.rs
plugins/zenoh-plugin-rest/: Cargo.toml
plugins/zenoh-plugin-storage-manager/: Cargo.toml
plugins/zenoh-plugin-storage-manager/src/memory_backend/: mod.rs
plugins/zenoh-plugin-storage-manager/src/replica/: mod.rs  storage.rs
zenoh/: Cargo.toml
zenoh-ext/examples/: Cargo.toml
zenoh-ext/src/: advanced_cache.rs  advanced_publisher.rs  advanced_subscriber.rs  fragmentation.rs  handlers.rs  lib.rs  publication_cache.rs  serialization.rs
zenoh-ext/tests/: fragmentation.rs
zenoh/benches/: tables_bench.rs
zenoh/src/: lib.rs  prelude.rs  query.rs  session.rs
zenoh/src/api/: admin.rs  encoding.rs  publisher.rs  queryable.rs  sample.rs  session.rs  timestamp_stack.rs
zenoh/src/api/builders/: publisher.rs  querier.rs  query.rs  reply.rs  sample.rs  session.rs
zenoh/src/api/handlers/: callback.rs
zenoh/src/net/primitives/: demux.rs  mod.rs  mux.rs
zenoh/src/net/routing/: face.rs  mod.rs  network.rs  pubsub.rs  queries.rs  router.rs
zenoh/src/net/routing/dispatcher/: face.rs  pubsub.rs  queries.rs  tables.rs
zenoh/src/net/routing/hat/p2p_peer/: pubsub.rs
zenoh/src/net/routing/interceptor/: access_control.rs  authorization.rs  downsampling.rs  mod.rs
zenoh/src/net/routing/restree/: arctree.rs  mod.rs
zenoh/src/net/runtime/: adminspace.rs  mod.rs  orchestrator.rs
zenoh/tests/: authentication.rs  interceptors.rs  liveliness.rs  tables.rs  timestamp_instrumentation.rs
