[package]
name = "smart-building-ch1"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace]
# Make this a standalone workspace, not part of the main Zenoh workspace

[[bin]]
name = "room_sensor"
path = "src/bin/room_sensor.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[dependencies]
zenoh = { version = "1.7.2", features = ["default"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
env_logger = "0.11"
