[package]
name = "smart-building-ch2"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace]
# Make this a standalone workspace, not part of the main Zenoh workspace

[[bin]]
name = "multi_sensor"
path = "src/bin/multi_sensor.rs"

[[bin]]
name = "floor_monitor"
path = "src/bin/floor_monitor.rs"

[[bin]]
name = "building_sensors"
path = "src/bin/building_sensors.rs"

[[bin]]
name = "selective_monitor"
path = "src/bin/selective_monitor.rs"

[dependencies]
zenoh = { path = "../../../../zenoh", features = ["default"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
env_logger = "0.11"
