[package]
name = "smart-building-ch3"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace]
# Make this a standalone workspace, not part of the main Zenoh workspace

[[bin]]
name = "room_status_service"
path = "src/bin/room_status_service.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "building_status"
path = "src/bin/building_status.rs"

[[bin]]
name = "selective_query"
path = "src/bin/selective_query.rs"

[dependencies]
zenoh = { path = "../../../../zenoh", features = ["default"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
env_logger = "0.11"
