[package]
name = "smart-building-ch5"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace]
# Make this a standalone workspace, not part of the main Zenoh workspace

[[bin]]
name = "sensor_network"
path = "src/bin/sensor_network.rs"

[[bin]]
name = "aggregator"
path = "src/bin/aggregator.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "health_monitor"
path = "src/bin/health_monitor.rs"

[dependencies]
zenoh = { version = "1.7.2", features = ["default"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
env_logger = "0.11"
