[package]
name = "smart-building-ch8"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace]

[dependencies]
zenoh = { path = "../../../../zenoh", features = ["default"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
env_logger = "0.11"
